Add image memory to avoid unnecessary loading images